--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><img src="./image/add.png" width="20" height="20"/></li>
             </ul>
         </nav>
     </header>
