Update navigation to include an accessible add icon with alt text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><img src="./image/add.png" width="20" height="20"/></li>
+                <a href="">
+                    <img src="./image/add.png" width="20" height="20" alt="White plus sign centered inside a black circle, symbolizing adding or creating something, with a clean and minimal design" />
+                </a>
             </ul>
         </nav>
     </header>
